# LinearFold

./: AUTHORS  CMakeLists.txt  LICENSE  LinearFold.cpp  LinearFold.h  LinearFoldEval.cpp  Makefile  README.md  beamckypar.cpp  beamckypar.h  draw_circular_plot  ecoli_tRNA  energy_par.h  energy_parameter.h  example.shape  fastcky_w.h  gflags.py  intl11.h  linearfold  rna.ps  testcons  testeval  testseq  utility.h  utility_v.h
old/: Makefile  gflags.py  linearfold
old/src/: LinearFold.cpp  LinearFold.h
src/: LinearFold.cpp  LinearFold.h  LinearFoldEval.cpp  LinearFoldEval.h
src/Utils/: energy_parameter.h  feature_weight.h  intl21.h  intl22.h  shared.h  utility.h  utility_v.h
src/scripts/: gen_latex_script.py
